# tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api/cmake/: FindTBB.cmake  FindUSD.cmake
api/embree/: embree-config-version.cmake  embree-config.cmake  embree-vars.sh
api/embree/lib/: libtbb.so.2  libtbbmalloc.so.2
api/imgui/: imgui_impl_glfw_gl3.cpp
api/tbb/: README.md
api/tbb/cmake/: TBBConfig.cmake  TBBConfigVersion.cmake
api/tbb/lib/intel64/gcc4.7/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  (+3 more)
api/tbb/lib/mic/: libtbb.so.2  libtbb_debug.so.2  libtbb_preview.so.2  libtbb_preview_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
cmake/defaults/: CXX.cmake  Defaults.cmake  ThirdParty.cmake
cmake/dependencies/internal/: SetupCLI11.cmake  SetupEmbreeCommon.cmake  SetupGLAD.cmake  SetupImGui.cmake  SetupPCG.cmake  SetupSPDLog.cmake  SetupTinyEXR.cmake
cmake/modules/: FindTBB.cmake  FindUSD.cmake
cmake/setup/: CXX.cmake  Options.cmake
cpp/: CMakeLists.txt
cpp/include/bsdf/: bsdf.h  lambert.h  orennayar.h
cpp/include/camera/: camera.h
cpp/include/context/: cli.h  context.h  imgui.h  qt.h.bak
cpp/include/gui/imgui/: window.h
cpp/include/gui/qt/: tracerwindow.h  window.h
cpp/include/integrator/: debug.h  integrator.h  udpt.h
cpp/include/material/: default.h  diffuse.h  disney.h
cpp/include/math/: vector.h
cpp/include/object/: buffer.h  curve.h  geometry.h  quadmesh.h  ray.h  trianglemesh.h
cpp/include/opengl/: glshader.h
cpp/include/renderer/: renderer.h
cpp/include/sampling/: sampler.h
cpp/include/scene/: scenemanager.h
cpp/include/utility/: camera.h  cli.h  color.h  embree.h  glfw.h  math.h  opengl.h  render.h  tbb.h  usd.h
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/bsdf/: lambert.cpp  orennayar.cpp
cpp/src/camera/: camera.cpp
cpp/src/context/: cli.cpp  imgui.cpp  qt.cpp.bak
cpp/src/gui/imgui/: window.cpp
cpp/src/gui/qt/: window.cpp
cpp/src/integrator/: diffuse.cpp  integrator.cpp  normal.cpp  occlusion.cpp
cpp/src/material/: diffuse.cpp  disney.cpp  empirical.cpp
cpp/src/math/: vector.cpp
cpp/src/object/: buffer.cpp  quadmesh.cpp
cpp/src/renderer/: renderer.cpp
cpp/src/sampling/: sampler.cpp
cpp/src/scene/: scenemanager.cpp
include/bsdf/: bsdf.h  lambert.h  orennayar.h
include/camera/: camera.h
include/context/: cli.h  context.h  gui.h  imgui.h  qt.h.bak
include/gui/: tracerwindow.h
include/gui/imgui/: window.h
include/integrator/: debug.h  diffuse.h  integrator.h  normal.h  occlusion.h  position.h
include/material/: diffuse.h  disney.h  empirical.h  material.h
include/math/: vector.h
include/object/: buffer.h  geometry.h  quadmesh.h  ray.h  subdivmesh.h  trianglemesh.h
include/opengl/: glshader.h
include/renderer/: renderer.h
include/sampling/: sampler.h
include/scene/: scenemanager.h
include/utility/: camera_helper.h  cli_helper.h  color_helper.h  embree_helper.h  math_helper.h  output_helper.h  render_helper.h  tbb_helper.h  usd_helper.h
res/qml/: main.qml  qtquickcontrols2.conf
res/qml/logger/: qmldir
res/qml/renderconfig/: qmldir  renderconfig.qml
res/qml/scenegraph/: qmldir
res/qml/viewport/: qmldir  viewport.qml
res/scenes/: cornell.xml  cornellScene.txt  cupAndSaucer.usdc  materialTest.xml  monoSphere.xml  testScene.txt
res/scenes/usd/: cornell.usda  materialTest.usda  monoSphere.usda
res/scenes/xml/: cornell.xml  materialTest.xml  monoSphere.xml
res/shaders/: quadRender.frag  quadRender.vert
resources/scenes/usd/: stormtroopers.usdc
resources/shaders/: screenQuad.vert
resources/shaders/glsl/: screen_quad.frag  screen_quad.vert
src/: main.cpp
src/bsdf/: bsdf.cpp  bsdf.h  lambert.cpp  lambert.h  orennayar.cpp  orennayar.h
src/camera/: camera.cpp  camera.h
src/context/: cli.cpp  cli.h  context.cpp  context.h  gui.cpp  gui.h
src/geometry/: mesh.h  quadmesh.h  ray.h  sphere.cpp  sphere.h  subdivmesh.h  triangle.cpp  triangle.h  vector.cpp  vector.h
src/gui/: shadergraph.h  tracerwindow.cpp  window.cpp  window.h
src/gui/qt/: tracerwindow.cpp
src/integrator/: debug.cpp  debug.h  diffuse.cpp  diffuse.h  integrator.cpp  integrator.h  normal.cpp  normal.h  occlusion.cpp  occlusion.h  pathtracer.cpp  pathtracer.h  position.cpp  position.h  udpt.cpp  udpt.h
src/material/: bsdf.h  default.cpp  default.h  diffuse.cpp  diffuse.h  disney.cpp  disney.h  empirical.cpp  empirical.h  material.cpp  material.h
src/math/: math_helper.h  randomizer.cpp  randomizer.h  vector.cpp  vector.h
src/object/: buffer.cpp  buffer.h  curve.cpp  curve.h  geometry.cpp  geometry.h  quadmesh.cpp  ray.h  subdivmesh.cpp  subdivmesh.h  trianglemesh.cpp  trianglemesh.h
src/objects/: curve.cpp  curve.h  geometry.cpp  geometry.h  quadmesh.cpp  quadmesh.h  ray.cpp  ray.h  subdivmesh.h  trianglemesh.cpp  trianglemesh.h
src/objects/geometry/: mesh.cpp  sphere.cpp  sphere.h
src/objects/lights/: geolight.cpp  geolight.h  light.cpp  light.h
src/opengl/: glshader.cpp  glshader.h
src/render/: rendermanager.cpp  rendermanager.h
src/renderer/: gui.cpp  gui.h  renderer.cpp  renderer.h  window.cpp  window.h
src/rendering/: integrator.cpp  integrator.h  material.cpp  material.h  renderer.cpp  renderer.h  rendermanager.cpp  rendermanager.h  sampling.h  shader.h  shaderGL.cpp  shaderGL.h  window.cpp  window.h
src/rendering/integrators/: integrator.cpp  integrator.h  pathtracer.cpp  pathtracer.h
src/rendering/materials/: material.cpp  material.h
src/resources/: buffer.cpp  buffer.h  material.h  object.h  scene.cpp  scene.h  shader.cpp  shader.h
src/sampling/: sampler.cpp  sampler.h
src/scene/: scenemanager.cpp  scenemanager.h  usdscene.cpp  usdscene.h  xmlscene.cpp  xmlscene.h
src/utility/: buffer.cpp  buffer.h  camera_helper.h  cli_helper.h  color_helper.h  embree_helper.h  math_helper.h  output_helper.h  render_helper.h  tbb_helper.h  usd_helper.h
src/viewport/: hydrarenderer.cpp  hydrarenderer.h  hydraviewport.cpp  hydraviewport.h
